<resources>
    <string name="app_name">Valid_app</string>
    <string name="dev_name">Camilo Andrés Arévalo Arias</string>
    <string name="test_name">Prueba técnica Android</string>

    <string name="title_info">Info</string>
    <string name="title_artist">Top Artists</string>

    <string name="name">Name</string>
    <string name="listeners">Listeners:</string>
    <string name="mbid">mbid:</string>
    <string name="url">Url:</string>
    <string name="streamable">Streamable:</string>
    <string name="pic_descr">Artist Picture:</string>

</resources>
