<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/artist_iv"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_weight="1"
        android:backgroundTint="@color/colorAccent"
        android:contentDescription="@string/pic_descr"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/listeners_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listeners"
                android:layout_marginRight="3sp"/>

            <TextView
                android:id="@+id/listeners_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mbid_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mbid"
                android:layout_marginRight="3sp"/>

            <TextView
                android:id="@+id/mbid_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/url_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url"
                android:layout_marginRight="3sp"/>

            <TextView
                android:id="@+id/url_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/streamable_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/streamable"
                android:layout_marginRight="3sp"/>

            <TextView
                android:id="@+id/streamable_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>